--- a/todo.html
+++ b/todo.html
@@ -31,8 +31,38 @@
     <title>TODO LIST</title>
   </head>
   <body>
+    <div class="top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="todo.html">TODO LIST</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarTogglerDemo02"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">LogOut</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    </div>
     <div class="container cen">
-      <ul id="list" style="list-style: none"></ul>
+      <div class="d-flex row justify-content-lg-center m-auto myli">
+        <ul id="list" class="list-group" style="list-style: none"></ul>
+      </div>
     </div>
   </body>
 </html>
