--- a/todo.html
+++ b/todo.html
@@ -70,7 +70,7 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="rounded">
           <input type="text" id="textvalue" />
-          <button class="add-btn">
+          <button class="add-btn" onclick="adddata();">
             <i class="fas fa-plus" style="color: blue"></i>
           </button>
         </div>
